@@ -67,6 +67,11 @@
      <input id="encrypt" name="encrypt" type="hidden" value="<tag:encrypt />" />
     </div>
 </if:encrypt>
+<if:stationery>
+    <div>
+     <gettext>Stationery</gettext><span id="stationery_label"></span>
+    </div>
+</if:stationery>
    </div>
 
    <table>
