@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Implement stationery support in DIMP.
 [mms] Add preference to control displayed content for multipart/alternative
       parts (Request #6711).
 [mms] Allow multiple messages to be forwarded in a single outgoing message
